--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
-    "knex": "^0.17.0",
+    "inquirer": "^6.3.1",
+    "knex": "^0.17.3",
     "mysql": "^2.17.1",
     "snazzy": "^8.0.0"
   },
