--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Project 2",
   "main": "server.js",
   "scripts": {
-    "startdev": "node server.js",
-    "start": "nodemon server.js",
+    "start": "node ./bin/www",
     "lint": "standard --verbose | snazzy",
     "fix": "standard --fix .",
     "test": "npm run lint && cross-env NODE_ENV=test mocha -u tdd --reporter spec --exit"
