--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
-    "knex": "^0.17.3",
+    "knex": "^0.17.5",
     "mysql": "^2.12.0",
     "snazzy": "^8.0.0"
   },
@@ -26,6 +26,8 @@
     "standard": "^12.0.1"
   },
   "standard": {
-    "env": [ "mocha" ]
+    "env": [
+      "mocha"
+    ]
   }
 }
