--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-handlebars": "^3.1.0",
     "knex": "^0.17.5",
     "mysql": "^2.12.0",
+    "nodemon": "^1.19.1",
     "snazzy": "^8.0.0"
   },
   "devDependencies": {
@@ -41,5 +42,5 @@
       "const",
       "alert"
     ]
-}
+  }
 }
