--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "fast-html-parser": "^1.0.1",
     "knex": "^0.17.5",
     "mysql": "^2.12.0",
     "nodemon": "^1.19.1",
@@ -25,6 +27,7 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "cross-env": "^5.2.0",
+    "eslint": "^6.0.0",
     "mocha": "^6.1.4",
     "standard": "^12.0.1"
   },
