--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "fast-html-parser": "^1.0.1",
-    "knex": "^0.17.5",
-    "mysql": "^2.12.0",
+    "inquirer": "^6.5.0",
+    "knex": "^0.17.6",
+    "mysql": "^2.17.1",
     "nodemon": "^1.19.1",
     "snazzy": "^8.0.0"
   },
