--- a/package.json
+++ b/package.json
@@ -14,14 +14,24 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
+    "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.2",
     "fast-html-parser": "^1.0.1",
     "inquirer": "^6.5.0",
     "knex": "^0.17.6",
+    "mongoose": "^5.6.5",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "snazzy": "^8.0.0"
   },
   "devDependencies": {
