--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport-local": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-simple-chatbot": "^0.6.1",
     "snazzy": "^8.0.0"
   },
   "devDependencies": {
@@ -40,6 +41,7 @@
     "cross-env": "^5.2.0",
     "eslint": "^6.0.0",
     "mocha": "^6.1.4",
+    "react-scripts": "^3.0.1",
     "standard": "^12.0.1"
   },
   "standard": {
